Move basic function over to NREL template

--- a/frontend/client/css/dashboard.css
+++ b/frontend/client/css/dashboard.css
@@ -80,9 +80,9 @@ li {
   margin-bottom: 20px;
 }
 .bg-main-website {
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../client/img/bg-pattern.png"), #7b4397;
+  background: url("../client/img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../client/img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
 }
 button {
   background: #ff515d;
